more recent version of the code

--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ Pages:
   '1': |-
     This is a draft put out by my editor, I am still writing the thing.§0
     §0
-    §0[Editor note - the pages will update automatically]§0
+    §0[Editors note - the pages will update automatically]§0
     §0
     §0
     §0...
